# bc-hrbl

./: .gitignore  CHANGELOG.md  README.md  cppcheck-suppressions.txt  meson.build
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_bc_hrbl.c  meson.build
debian/: changelog  control
fuzzing/: fuzz_bc_hrbl_convert_json.c  fuzz_bc_hrbl_export.c  fuzz_bc_hrbl_reader_open.c  fuzz_bc_hrbl_verify.c  fuzz_bc_hrbl_writer.c  meson.build
fuzzing/corpus/bc_hrbl_reader_open/: seed_empty.hrbl
include/internal/: bc_hrbl_format_internal.h  bc_hrbl_hash.h  bc_hrbl_reader_internal.h  bc_hrbl_writer_internal.h
include/public/: bc_hrbl.h  bc_hrbl_convert.h  bc_hrbl_export.h  bc_hrbl_reader.h  bc_hrbl_types.h  bc_hrbl_verify.h  bc_hrbl_writer.h
src/: meson.build
src/convert/: bc_hrbl_convert_json.c
src/export/: bc_hrbl_export.c  bc_hrbl_export_ini.c  bc_hrbl_export_yaml.c
src/hash/: bc_hrbl_hash.c
src/reader/: bc_hrbl_reader.c
src/verify/: bc_hrbl_verify.c
src/writer/: bc_hrbl_writer.c  bc_hrbl_writer_encoder.c
tests/: meson.build  test_bc_hrbl_convert_json.c  test_bc_hrbl_export_json.c  test_bc_hrbl_export_yaml_ini.c  test_bc_hrbl_reader_basic.c  test_bc_hrbl_smoke.c  test_bc_hrbl_verify_edge_cases.c  test_bc_hrbl_verify_status.c  test_bc_hrbl_writer_encoding_paths.c  test_bc_hrbl_writer_errors.c  test_bc_hrbl_writer_finalize.c  test_bc_hrbl_writer_kinds.c  test_bc_hrbl_writer_oom.c  test_bc_hrbl_writer_roundtrip.c  test_bc_hrbl_writer_validation.c
